# SpitalManagment

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
HospitalManagement/: .gitignore  Makefile  README.md  package.json  server.js  start_server_windows.bat
HospitalManagement/data/: README.md  facturi.json  internari.json  intrari_spital.json  istoric_medical.json  log.txt  medicamente.json  medici.json  pacienti.json  programari.json  raport_spital.json  raport_spital.txt  retete.json  statistici.json  users.json
HospitalManagement/docs/: documentatie.md
HospitalManagement/src/: AchizitieMedicamente.cpp  AchizitieMedicamente.h  Angajat.cpp  Angajat.h  Asistent.cpp  Asistent.h  AuthService.cpp  AuthService.h  CsvExporter.cpp  CsvExporter.h  DataManager.cpp  DataManager.h  Exceptions.h  Factura.cpp  Factura.h  FacturaFactory.cpp  FacturaFactory.h  Farmacie.cpp  Farmacie.h  HtmlExporter.cpp  HtmlExporter.h  Internare.cpp  Internare.h  IntrareSpital.cpp  IntrareSpital.h  IstoricMedical.cpp  IstoricMedical.h  Medic.h  (+25 more)
docs/: documentatie.md
include/: Angajat.h  Asistent.h  Exceptions.h  Factura.h  FacturaFactory.h  Internare.h  JsonStorage.h  Logger.h  Medic.h  Pacient.h  Persoana.h  Programare.h  ServiciuMedical.h  SpitalService.h
src/: Angajat.cpp  Asistent.cpp  Factura.cpp  FacturaFactory.cpp  Internare.cpp  JsonStorage.cpp  Logger.cpp  Medic.cpp  Pacient.cpp  Persoana.cpp  Programare.cpp  ServiciuMedical.cpp  SpitalService.cpp  main.cpp
tests/: test_facturi.cpp  test_programari.cpp
web/: app.js  index.html  server.ps1  style.css
(+22 files in other folders)
